completed modify user added Tweets related code

--- a/src/A2.TwitterClone.UI/Pages/Shared/_Layout.cshtml
+++ b/src/A2.TwitterClone.UI/Pages/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                 @if (User.Identity.IsAuthenticated)
                 {
                     <li><a asp-page="/SecuredPage/Tweet">Tweet</a></li>
-                    <li><a asp-page="/SecuredPage/Tweet">Edit Profile Info</a></li>
+                    <li><a asp-page="/SecuredPage/ModifyUser">Edit Profile Info</a></li>
                     <li><a asp-page="/SecuredPage/Tweet">Friends</a></li>
                     <li><a asp-page="/SecuredPage/Signout">Logout</a></li>
                     <li><a asp-page="/SecuredPage/DeleteUser">Delete Me</a></li>
