Deleted  tweets when user gets deleted. Some styling completed

--- a/src/A2.TwitterClone.UI/Pages/SecuredPage/AddTweet.cshtml
+++ b/src/A2.TwitterClone.UI/Pages/SecuredPage/AddTweet.cshtml
@@ -12,7 +12,7 @@
         <textarea asp-for="Tweets"> </textarea>
         <span asp-validation-for="Tweets"></span>
     </div>
-    <input type="submit" value="Add Tweets" /> &nbsp; &nbsp;&nbsp;
-    <a style="" value="Cancel" asp-page="./Tweet" >Cencel</a>
+    <input type="submit" class="link-button" value="Add Tweets" /> &nbsp; &nbsp;&nbsp;
+    <a style="" class="link-button" value="Cancel" asp-page="./Tweet" >Cancel</a>
 </form>
 
