--- a/src/A2.TwitterClone.UI/Pages/Shared/_Layout.cshtml
+++ b/src/A2.TwitterClone.UI/Pages/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
                 }
                 else
                 {
-                    <li><a asp-page="/RegisterAndLogin">Register</a></li>
+                    <li><a asp-page="/Register">Register</a></li>
                     <li><a asp-page="/Account/Login">Login</a></li>
                 }
             </ul>
