--- a/src/A2.TwitterClone.UI/Pages/SecuredPage/ModifyUser.cshtml
+++ b/src/A2.TwitterClone.UI/Pages/SecuredPage/ModifyUser.cshtml
@@ -18,7 +18,7 @@
         <label asp-for="MobileNumber">Mobile</label>
         <input asp-for="MobileNumber" readonly="readonly"/>
         <br />
-        <input type="submit" value="Modify User" />
+        <input class="link-button" type="submit" value="Modify User" />
     </div>
 </form>
 
