--- a/src/A2.TwitterClone.UI/Pages/SecuredPage/EditTweet.cshtml
+++ b/src/A2.TwitterClone.UI/Pages/SecuredPage/EditTweet.cshtml
@@ -13,6 +13,6 @@
         <textarea asp-for="Tweets"> </textarea>
         <span asp-validation-for="Tweets"></span>
     </div>
-    <input type="submit" value="Edit Tweets" /> &nbsp; &nbsp;&nbsp;
-    <a style="" value="Cancel" asp-page="./Tweet" asp-route-id="@ViewData["TweetId"]">Cencel</a>
+    <input type="submit" class="link-button" value="Edit Tweets" /> &nbsp; &nbsp;&nbsp;
+    <a style="" class="link-button" value="Cancel" asp-page="./Tweet" asp-route-id="@ViewData["TweetId"]">Cancel</a>
 </form>
