--- a/src/A2.TwitterClone.UI/Pages/Shared/_Layout.cshtml
+++ b/src/A2.TwitterClone.UI/Pages/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                 <br />
                 <br/>
                 
-                <ul id="menu" style="align-content:safe center">
+                <ul id="menu" style="align-content:safe center;margin-left: 200px;">
 
 
                     @if (User.Identity.IsAuthenticated)
