added button and fixed the issues of text decoration

--- a/src/A2.TwitterClone.UI/Pages/SecuredPage/DeleteUser.cshtml
+++ b/src/A2.TwitterClone.UI/Pages/SecuredPage/DeleteUser.cshtml
@@ -8,7 +8,7 @@
 <div>
     <h2 style="font:300;font-weight:bold">You are about to delete your user profile. This will delete all your tweets also</h2>
     <form asp-action="post">
-        <input class="link-button" type="submit" value="Please go ahead and delete"/>
+        <input class="link-button" type="submit" value="Yes delete"/>
     </form>
 </div>
 
