removed underline in edit tweet

--- a/src/A2.TwitterClone.UI/Pages/SecuredPage/EditTweet.cshtml
+++ b/src/A2.TwitterClone.UI/Pages/SecuredPage/EditTweet.cshtml
@@ -14,5 +14,5 @@
         <span asp-validation-for="Tweets"></span>
     </div>
     <input type="submit" class="link-button" value="Edit Tweets" /> &nbsp; &nbsp;&nbsp;
-    <a style="" class="link-button" value="Cancel" asp-page="./Tweet" asp-route-id="@ViewData["TweetId"]">Cancel</a>
+    <a  class="link-button" style="text-decoration: none;" value="Cancel" asp-page="./Tweet" asp-route-id="@ViewData["TweetId"]">Cancel</a>
 </form>
